--- a/app/pom.xml
+++ b/app/pom.xml
@@ -36,7 +36,7 @@
         <artifactId>maven-antrun-plugin</artifactId>
         <executions>
           <execution>
-            <phase>pre-integration-test</phase>
+            <phase>package</phase>
             <configuration>
               <tasks>
                 <echo>About to copy to FileInstall directory</echo>
