--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>edu.berkeley.myberkeley</groupId>
-  <artifactId>base</artifactId>
+  <artifactId>edu.berkeley.myberkeley.base</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>MyBerkeley</name>
@@ -44,12 +44,13 @@
       </snapshots>
       <url>https://source.sakaiproject.org/maven2/</url>
     </repository>
-    <!--
     <repository>
       <id>myberkeley-snapshots</id>
       <url>http://svn.media.berkeley.edu/nexus/content/repositories/myberkeley-snapshots</url>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
     </repository>
-    -->
   </repositories>
   <build>
     <plugins>
@@ -74,9 +75,18 @@
           <encoding>${project.build.sourceEncoding}</encoding>
         </configuration>
       </plugin>
-  </plugins>
-  <pluginManagement>
-    <plugins>
+      <plugin>
+        <inherited>true</inherited>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-deploy-plugin</artifactId>
+        <version>2.5</version>
+        <configuration>
+          <updateReleaseInfo>true</updateReleaseInfo>
+        </configuration>
+      </plugin>
+    </plugins>
+    <pluginManagement>
+      <plugins>
         <plugin>
           <groupId>org.apache.felix</groupId>
           <artifactId>maven-scr-plugin</artifactId>
@@ -103,26 +113,43 @@
             </instructions>
           </configuration>
         </plugin>
-      <!-- maven-antrun-plugin v. 1.1 does not handle unset properties correctly -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-antrun-plugin</artifactId>
-        <version>1.3</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.sakaiproject.nakamura</groupId>
-            <artifactId>org.sakaiproject.nakamura.app</artifactId>
-            <version>0.3</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-      <!-- maven-clean-plugin v. 2.2 ignores "excludes" -->
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-clean-plugin</artifactId>
-        <version>2.3</version>
-      </plugin>
-    </plugins>
-  </pluginManagement>
+        <!-- maven-antrun-plugin v. 1.1 does not handle unset properties correctly -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <version>1.3</version>
+          <dependencies>
+            <!--
+              This is only needed for the integration module, but plug-in dependencies
+              take effect only once per Maven build and should therefore be set in
+              the parent POM.
+            -->
+            <dependency>
+              <groupId>org.sakaiproject.nakamura</groupId>
+              <artifactId>org.sakaiproject.nakamura.app</artifactId>
+              <version>0.3</version>
+            </dependency>
+          </dependencies>
+        </plugin>
+        <!-- maven-clean-plugin v. 2.2 ignores "excludes" -->
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-clean-plugin</artifactId>
+          <version>2.3</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-deploy-plugin</artifactId>
+          <version>2.5</version>
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>myberkeley-snapshots</id>
+      <name>MyBerkeley Snapshots</name>
+      <url>dav:http://svn.media.berkeley.edu/nexus/content/repositories/myberkeley-snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
