--- a/pom.xml
+++ b/pom.xml
@@ -7,12 +7,10 @@
   <version>1.0-SNAPSHOT</version>
   <name>MyBerkeley</name>
   <url>http://ets.berkeley.edu/</url>
-  <!--
   <issueManagement>
     <system>jira</system>
-    <url>http://jira.sakaiproject.org/browse/SAKIII</url>
+    <url>http://jira.media.berkeley.edu/jira/browse/MYB</url>
   </issueManagement>
-  -->
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <sakai3.home>${project.parent.basedir}/working</sakai3.home>
