--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -77,7 +77,7 @@
                   <sysproperty key="felix.fileinstall.dir" value="load"/>
                   <sysproperty key="sling.home" value="sling"/>
                   <arg value="-p"/>
-                  <arg value="8080"/>
+                  <arg value="${sling.port}"/>
                   <arg value="start"/>
                 </java>
                 <echo message="Server has started; log at ${sakai3.home}/sling/logs/error.log"/>
