--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -28,6 +28,12 @@
                             <version>0.4.0-SNAPSHOT</version>
                             <startLevel>30</startLevel>
                         </bundle>
+                        <bundle>
+                            <groupId>edu.berkeley.myberkeley</groupId>
+                            <artifactId>edu.berkeley.myberkeley.app</artifactId>
+                            <version>1.0-SNAPSHOT</version>
+                            <startLevel>30</startLevel>
+                        </bundle>
                     </additionalBundles>
                     <bundleExclusions>
                         <bundle>
