Add sakai-snapshots repository to avoid local repo deployments (when we can)

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,18 @@
         <enabled>false</enabled>
       </snapshots>
     </repository>
+    <repository>
+      <id>sakai-snapshots</id>
+      <name>Sakai Snapshots</name>
+      <layout>default</layout>
+      <url>http://source.sakaiproject.org/maven2-snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
   </repositories>
   <build>
     <plugins>
