--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -105,6 +105,34 @@
           </execution>
         </executions>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.1</version>
+	<!--  typical command line usage - mvn exec:exec -DscriptName=create-users.rb     -->
+	<!--  requires shell/environment variable  NAKAMURA_SRC point to src tree root    -->
+        <executions>
+          <execution>
+            <id>handle-users</id>
+            <phase>verify</phase>          
+            <goals>
+              <goal>exec</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <executable>ruby</executable>
+          <workingDirectory>${project.build.scriptSourceDirectory}</workingDirectory>
+          <arguments>
+            <argument>-w</argument>
+            <argument>${project.build.scriptSourceDirectory}/${scriptName}</argument>
+          </arguments>
+          <environmentVariables>
+          	<key>NAKAMURA_SRC</key>
+          	<value>${env.NAKAMURA_SRC}/open-experiments/testscripts/SlingRuby</value>
+          </environmentVariables>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 </project>
