--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -45,19 +45,6 @@
         <artifactId>maven-antrun-plugin</artifactId>
         <!-- maven-antrun-plugin v. 1.1 does not handle unset properties correctly -->
         <version>1.3</version>
-        <dependencies>
-          <!--
-            WARNING: Plug-in dependencies take effect only once per Maven build,
-            which means this can be the only use of antrun in the project.
-            TODO Find another approach to server start/stop.
-          -->
-          <dependency>
-            <groupId>edu.berkeley.myberkeley</groupId>
-            <artifactId>edu.berkeley.myberkeley.launchpad</artifactId>
-            <version>1.0-SNAPSHOT</version>
-            <scope>runtime</scope>
-          </dependency>
-        </dependencies>
         <executions>
           <execution>
             <id>start-sling</id>
@@ -68,7 +55,7 @@
                 <java classname="org.apache.sling.launchpad.app.Main"
                   fork="true" spawn="true"
                   dir="${sakai3.home}"
-                  classpathref="maven.plugin.classpath">
+                  classpathref="maven.runtime.classpath">
                   <jvmarg value="-Xdebug"/>
                   <jvmarg value="-Xnoagent"/>
                   <jvmarg value="-Xrunjdwp:transport=dt_socket,address=9001,server=y,suspend=n"/>
@@ -95,7 +82,7 @@
               <tasks name="sling-stop" if="sling.stop">
                 <java classname="org.apache.sling.launchpad.app.Main"
                   fork="true"
-                  classpathref="maven.plugin.classpath">
+                  classpathref="maven.runtime.classpath">
                   <arg value="stop"/>
                 </java>
               </tasks>
@@ -108,4 +95,12 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+    <dependency>
+      <groupId>edu.berkeley.myberkeley</groupId>
+      <artifactId>edu.berkeley.myberkeley.launchpad</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>runtime</scope>
+    </dependency>
+  </dependencies>
 </project>
