--- a/app/pom.xml
+++ b/app/pom.xml
@@ -16,9 +16,12 @@
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-bundle-plugin</artifactId>
         <extensions>true</extensions>
+        <version>2.1.0</version>
         <configuration>
           <instructions>
+            <!--
             <Export-Package>edu.berkeley.myberkeley.api.*</Export-Package>
+            -->
             <Private-Package>edu.berkeley.myberkeley.impl.*</Private-Package>
             <Sling-Initial-Content>
               SLING-INF/initial-content/apps/myberkeley;overwrite:=true;path:=/apps/myberkeley,
@@ -30,6 +33,7 @@
       <plugin>
         <groupId>org.apache.felix</groupId>
         <artifactId>maven-scr-plugin</artifactId>
+        <version>1.4.4</version>
       </plugin>
     </plugins>
   </build>
