skipping exec execution by default

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -122,6 +122,7 @@
         </executions>
         <configuration>
           <executable>ruby</executable>
+          <skip>true</skip>
           <workingDirectory>${project.build.scriptSourceDirectory}</workingDirectory>
           <arguments>
             <argument>-w</argument>
