--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <artifactId>edu.berkeley.myberkeley.base</artifactId>
     <groupId>edu.berkeley.myberkeley</groupId>
@@ -9,94 +10,95 @@
   <artifactId>edu.berkeley.myberkeley.launchpad</artifactId>
   <name>MyBerkeley executable</name>
   <version>1.0-SNAPSHOT</version>
-    <packaging>jar</packaging>
-    <build>
-      <plugins>
-            <plugin>
-                <groupId>org.apache.sling</groupId>
-                <artifactId>maven-launchpad-plugin</artifactId>
-                <configuration>
-                    <defaultBundleList>
-                         <groupId>org.sakaiproject.nakamura</groupId>
-                         <artifactId>org.sakaiproject.nakamura.app</artifactId>
-                         <version>0.5-SNAPSHOT</version>
-                    </defaultBundleList>
-                    <additionalBundles>
-                        <bundle>
-                            <groupId>org.sakaiproject.nakamura</groupId>
-                            <artifactId>org.sakaiproject.nakamura.uxloader-myberkeley</artifactId>
-                            <version>0.4.0-SNAPSHOT</version>
-                            <startLevel>30</startLevel>
-                        </bundle>
-                        <bundle>
-                            <groupId>edu.berkeley.myberkeley</groupId>
-                            <artifactId>edu.berkeley.myberkeley.app</artifactId>
-                            <version>1.0-SNAPSHOT</version>
-                            <startLevel>30</startLevel>
-                        </bundle>
-                        <bundle>
-                            <groupId>org.sakaiproject.nakamura</groupId>
-                            <artifactId>org.sakaiproject.nakamura.casauth</artifactId>
-                            <version>0.5-SNAPSHOT</version>
-                            <startLevel>15</startLevel>
-                        </bundle>
-                    </additionalBundles>
-                    <bundleExclusions>
-                        <bundle>
-                            <groupId>org.sakaiproject.nakamura</groupId>
-                            <artifactId>org.sakaiproject.nakamura.uxloader</artifactId>
-                        </bundle>
-                    </bundleExclusions>
-                    <!-- Needs to be copied from nakamura.app -->
-                    <jarWebSupport>
-                         <groupId>org.sakaiproject.nakamura</groupId>
-                         <artifactId>org.sakaiproject.nakamura.jetty-config</artifactId>
-                         <version>0.5-SNAPSHOT</version>
-                         <startLevel>5</startLevel>
-                   </jarWebSupport>
-                </configuration>
-                <executions>
-                    <execution>
-                        <id>prepare-package</id>
-                        <goals>
-                            <goal>prepare-package</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <!-- Needs to be copied from nakamura.app -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <configuration>
-                   <archive>
-                     <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
-                     <manifest>
-                        <addDefaultImplementationEntries>
-                              true
-                        </addDefaultImplementationEntries>
-                     </manifest>
-                   </archive>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
-    <dependencies>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.launchpad.base</artifactId>
-            <version>2.1.1-20100322</version>
-            <classifier>webapp</classifier>
-            <type>war</type>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.sling</groupId>
-            <artifactId>org.apache.sling.launchpad.base</artifactId>
-            <version>2.1.1-20100322</version>
-            <classifier>app</classifier>
-            <scope>provided</scope>
-        </dependency>
-    </dependencies>
+  <properties>
+    <nakamura.version>0.6-SNAPSHOT</nakamura.version>
+  </properties>
+  <packaging>jar</packaging>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.sling</groupId>
+        <artifactId>maven-launchpad-plugin</artifactId>
+        <configuration>
+          <defaultBundleList>
+            <groupId>org.sakaiproject.nakamura</groupId>
+            <artifactId>org.sakaiproject.nakamura.app</artifactId>
+            <version>${nakamura.version}</version>
+          </defaultBundleList>
+          <additionalBundles>
+            <bundle>
+              <groupId>org.sakaiproject.nakamura</groupId>
+              <artifactId>org.sakaiproject.nakamura.uxloader-myberkeley</artifactId>
+              <version>0.4.0-SNAPSHOT</version>
+              <startLevel>30</startLevel>
+            </bundle>
+            <bundle>
+              <groupId>edu.berkeley.myberkeley</groupId>
+              <artifactId>edu.berkeley.myberkeley.app</artifactId>
+              <version>1.0-SNAPSHOT</version>
+              <startLevel>30</startLevel>
+            </bundle>
+            <bundle>
+              <groupId>org.sakaiproject.nakamura</groupId>
+              <artifactId>org.sakaiproject.nakamura.casauth</artifactId>
+              <version>${nakamura.version}</version>
+              <startLevel>15</startLevel>
+            </bundle>
+          </additionalBundles>
+          <bundleExclusions>
+            <bundle>
+              <groupId>org.sakaiproject.nakamura</groupId>
+              <artifactId>org.sakaiproject.nakamura.uxloader</artifactId>
+            </bundle>
+          </bundleExclusions>
+          <!-- Needs to be copied from nakamura.app -->
+          <jarWebSupport>
+            <groupId>org.sakaiproject.nakamura</groupId>
+            <artifactId>org.sakaiproject.nakamura.jetty-config</artifactId>
+            <version>${nakamura.version}</version>
+            <startLevel>5</startLevel>
+          </jarWebSupport>
+        </configuration>
+        <executions>
+          <execution>
+            <id>prepare-package</id>
+            <goals>
+              <goal>prepare-package</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <!-- Needs to be copied from nakamura.app -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-jar-plugin</artifactId>
+        <configuration>
+          <archive>
+            <manifestFile>${project.build.outputDirectory}/META-INF/MANIFEST.MF</manifestFile>
+            <manifest>
+              <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+            </manifest>
+          </archive>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <dependencies>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.launchpad.base</artifactId>
+      <version>2.1.1-20100322</version>
+      <classifier>webapp</classifier>
+      <type>war</type>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.sling</groupId>
+      <artifactId>org.apache.sling.launchpad.base</artifactId>
+      <version>2.1.1-20100322</version>
+      <classifier>app</classifier>
+      <scope>provided</scope>
+    </dependency>
+  </dependencies>
 </project>
 
