--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -50,7 +50,75 @@
         </plugins>
       </build>
     </profile>
-  </profiles>
+  <profile>
+    <id>loaddata-sling</id>
+    <activation>
+      <property>
+        <name>sling.loaddata</name>
+      </property>
+    </activation>
+    <build>
+      <plugins>
+	      <plugin>
+	        <groupId>org.codehaus.mojo</groupId>
+	        <artifactId>exec-maven-plugin</artifactId>
+	        <version>1.1</version>
+	        <executions>
+	          <execution>
+	            <id>load-users</id>
+	            <phase>integration-test</phase>          
+	            <goals>
+	              <goal>exec</goal>
+	            </goals>
+	          </execution>
+	        </executions>
+	        <configuration>
+	          <executable>ruby</executable>
+	          <workingDirectory>${project.build.scriptSourceDirectory}</workingDirectory>
+	          <arguments>
+	            <argument>-w</argument>
+	            <argument>${project.build.scriptSourceDirectory}/create-users.rb</argument>
+	          </arguments>
+	        </configuration>
+	      </plugin>
+      </plugins>
+    </build>
+  </profile>    
+  <profile>
+    <id>deletedata-sling</id>
+    <activation>
+      <property>
+        <name>sling.deletedata</name>
+      </property>
+    </activation>
+    <build>
+      <plugins>
+	      <plugin>
+	        <groupId>org.codehaus.mojo</groupId>
+	        <artifactId>exec-maven-plugin</artifactId>
+	        <version>1.1</version>
+	        <executions>
+	          <execution>
+	            <id>delete-users</id>
+	            <phase>post-integration-test</phase>          
+	            <goals>
+	              <goal>exec</goal>
+	            </goals>
+	          </execution>
+	        </executions>
+	        <configuration>
+	          <executable>ruby</executable>
+	          <workingDirectory>${project.build.scriptSourceDirectory}</workingDirectory>
+	          <arguments>
+	            <argument>-w</argument>
+	            <argument>${project.build.scriptSourceDirectory}/delete-users.rb</argument>
+	          </arguments>
+	        </configuration>
+	      </plugin>
+      </plugins>
+    </build>
+  </profile>   
+ </profiles>
   <build>
     <plugins>
       <plugin>
@@ -104,35 +172,6 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>exec-maven-plugin</artifactId>
-        <version>1.1</version>
-	<!--  typical command line usage - mvn exec:exec -DscriptName=create-users.rb     -->
-	<!--  requires shell/environment variable  NAKAMURA_SRC point to src tree root    -->
-        <executions>
-          <execution>
-            <id>handle-users</id>
-            <phase>verify</phase>          
-            <goals>
-              <goal>exec</goal>
-            </goals>
-          </execution>
-        </executions>
-        <configuration>
-          <executable>ruby</executable>
-          <skip>true</skip>
-          <workingDirectory>${project.build.scriptSourceDirectory}</workingDirectory>
-          <arguments>
-            <argument>-w</argument>
-            <argument>${project.build.scriptSourceDirectory}/${scriptName}</argument>
-          </arguments>
-          <environmentVariables>
-          	<key>NAKAMURA_SRC</key>
-          	<value>${env.NAKAMURA_SRC}/open-experiments/testscripts/SlingRuby</value>
-          </environmentVariables>
-        </configuration>
       </plugin>
     </plugins>
   </build>
