--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -38,12 +38,15 @@
               <version>1.0-SNAPSHOT</version>
               <startLevel>30</startLevel>
             </bundle>
+            <!-- CAS Authentication still has serious bugs. -->
+            <!--
             <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
               <artifactId>org.sakaiproject.nakamura.casauth</artifactId>
               <version>${nakamura.version}</version>
               <startLevel>15</startLevel>
             </bundle>
+            -->
           </additionalBundles>
           <bundleExclusions>
             <bundle>
