Include CAS integration; CAS logout not automatic at present

--- a/samples/org.sakaiproject.nakamura.casauth.CasAuthenticationHandler.cfg
+++ b/samples/org.sakaiproject.nakamura.casauth.CasAuthenticationHandler.cfg
@@ -1,6 +1,6 @@
 # Sakai CAS Authorization Header Authenticator (org.sakaiproject.nakamura.casauth.CasAuthenticationHandler)
 auth.cas.server.name=https://auth-test.berkeley.edu/cas
 auth.cas.server.login=https://auth-test.berkeley.edu/cas/login
-auth.cas.server.logout=
+auth.cas.server.logout=https://auth-test.berkeley.edu/cas/logout
 # The path that this handler should do auth for
 path=/
