added capability to load data on an arbitrary server as defined by -Dloaddata.server= and modified sling.rb to handle https schema which it did not previously (could only handle http schema)

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -66,6 +66,7 @@
 	            <argument>-w</argument>
 	            <argument>${project.build.scriptSourceDirectory}/sling_data_loader.rb</argument>
 	            <argument>${loaddata.numusers}</argument>
+	            <argument>${loaddata.server}</argument>
 	          </arguments>
 	        </configuration>
 	      </plugin>
