--- a/notices/pom.xml
+++ b/notices/pom.xml
@@ -18,22 +18,16 @@
     <plugins>
       <plugin>
         <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
+       <artifactId>maven-bundle-plugin</artifactId>
         <extensions>true</extensions>
-        <version>2.1.0</version>
         <configuration>
           <instructions>
-            <!--
-            <Export-Package>edu.berkeley.myberkeley.api.*</Export-Package>
-            -->
-            <Private-Package>edu.berkeley.myberkeley.*</Private-Package>
-            <!--
-            <Sling-Initial-Content>
-              SLING-INF/initial-content/apps/myberkeley;overwrite:=true;path:=/apps/myberkeley,
-			  SLING-INF/initial-content/myberkeley;overwrite:=true;path:=/myberkeley
-            </Sling-Initial-Content>
-          -->
-          </instructions>
+            <Bundle-Category>myberkeley</Bundle-Category>
+			<Export-Package> edu.berkeley.myberkeley.api.notice.* </Export-Package>          
+            <Private-Package>edu.berkeley.myberkeley.notice.*</Private-Package>
+            <Sling-Initial-Content>SLING-INF/initial-content/notices</Sling-Initial-Content>
+            <Embed-Transitive>true</Embed-Transitive>
+		</instructions>
         </configuration>
       </plugin>
       <plugin>
@@ -48,14 +42,20 @@
 	<dependency>
 	  <groupId>org.sakaiproject.nakamura</groupId>
 	  <artifactId>org.sakaiproject.nakamura.doc</artifactId>
-	  <version>0.7-SNAPSHOT</version>
+	  <version>0.6-SNAPSHOT</version>
 	</dependency>
 	<dependency>
 	  <groupId>org.sakaiproject.nakamura</groupId>
 	  <artifactId>org.sakaiproject.nakamura.messaging</artifactId>
-	  <version>0.7-SNAPSHOT</version>
+	  <version>0.6-SNAPSHOT</version>
+	  <scope>provided</scope>
 	</dependency>
-
+    <dependency>
+      <groupId>org.sakaiproject.nakamura</groupId>
+      <artifactId>org.sakaiproject.nakamura.user</artifactId>
+      <version>0.6-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>
 <!-- Sling --><!--
     <dependency>
       <groupId>org.apache.sling</groupId>
@@ -75,6 +75,12 @@
       <artifactId>org.osgi.compendium</artifactId>
       <version>1.2.0</version>
       <scope>provided</scope>
+        <exclusions>
+          <exclusion>
+            <groupId>org.apache.felix</groupId>
+            <artifactId>javax.servlet</artifactId>
+          </exclusion>
+        </exclusions>      
     </dependency>
 
 <!-- jcr -->
@@ -82,7 +88,7 @@
       <groupId>javax.jcr</groupId>
       <artifactId>jcr</artifactId>
       <version>2.0</version>
-      <scope>compile</scope> 
+      <scope>provided</scope> 
     </dependency>
 
 <!-- commons -->
