--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,17 @@
       </plugins>
     </pluginManagement>
   </build>
+  <dependencyManagement>
+    <dependencies>
+<!-- Web Application API -->
+      <dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>servlet-api</artifactId>
+        <version>2.4</version>
+        <scope>provided</scope>
+      </dependency>    
+    </dependencies>
+    </dependencyManagement>
   <distributionManagement>
     <snapshotRepository>
       <id>myberkeley-snapshots</id>
