--- a/samples/org.sakaiproject.nakamura.casauth.CasAuthenticationHandler.cfg
+++ b/samples/org.sakaiproject.nakamura.casauth.CasAuthenticationHandler.cfg
@@ -1,10 +1,6 @@
 # Sakai CAS Authorization Header Authenticator (org.sakaiproject.nakamura.casauth.CasAuthenticationHandler)
 auth.cas.server.name=https://auth-test.berkeley.edu/cas
 auth.cas.server.login=https://auth-test.berkeley.edu/cas/login
-
-# Not working at present.
-#auth.cas.server.logout=https://auth-test.berkeley.edu/cas/logout
-auth.cas.server.logout=
-
+auth.cas.server.logout=https://auth-test.berkeley.edu/cas/logout?url=http://localhost:8080/dev/index.html
 # The path that this handler should do auth for
 path=/
