Now that the myberkeley project actually includes some components, add the "redeploy" profile to speed development

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,25 @@
         <module>integration</module>
       </modules>
     </profile>
+    <profile>
+      <id>redeploy</id>
+      <build>
+       <plugins>
+         <plugin>
+          <groupId>org.apache.sling</groupId>
+          <artifactId>maven-sling-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>install-bundle</id>
+              <goals>
+                <goal>install</goal>
+              </goals>
+            </execution>
+          </executions>
+         </plugin>
+       </plugins>
+      </build>
+    </profile>
   </profiles>
   <repositories>
     <repository>
