--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -27,6 +27,18 @@
           </defaultBundleList>
           <additionalBundles>
             <bundle>
+              <groupId>edu.berkeley.myberkeley</groupId>
+              <artifactId>edu.berkeley.myberkeley.root</artifactId>
+              <version>1.0-SNAPSHOT</version>
+              <startLevel>0</startLevel>
+            </bundle>
+            <bundle>
+              <groupId>org.sakaiproject.nakamura</groupId>
+              <artifactId>org.sakaiproject.nakamura.casauth-myberkeley</artifactId>
+              <version>0.6.1-SNAPSHOT</version>
+              <startLevel>15</startLevel>
+            </bundle>
+            <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
               <artifactId>org.sakaiproject.nakamura.uxloader-myberkeley</artifactId>
               <version>0.5.0-SNAPSHOT</version>
@@ -34,21 +46,9 @@
             </bundle>
             <bundle>
               <groupId>edu.berkeley.myberkeley</groupId>
-              <artifactId>edu.berkeley.myberkeley.app</artifactId>
-              <version>1.0-SNAPSHOT</version>
-              <startLevel>30</startLevel>
-            </bundle>
-            <bundle>
-              <groupId>edu.berkeley.myberkeley</groupId>
               <artifactId>edu.berkeley.myberkeley.notices</artifactId>
               <version>1.0-SNAPSHOT</version>
               <startLevel>30</startLevel>
-            </bundle>
-            <bundle>
-              <groupId>org.sakaiproject.nakamura</groupId>
-              <artifactId>org.sakaiproject.nakamura.casauth-myberkeley</artifactId>
-              <version>0.6.1-SNAPSHOT</version>
-              <startLevel>15</startLevel>
             </bundle>
           </additionalBundles>
           <bundleExclusions>
@@ -59,6 +59,10 @@
             <bundle>
               <groupId>org.apache.sling</groupId>
               <artifactId>org.apache.sling.httpauth</artifactId>
+            </bundle>
+            <bundle>
+              <groupId>org.apache.sling</groupId>
+              <artifactId>org.apache.sling.launchpad.content</artifactId>
             </bundle>
           </bundleExclusions>
           <!-- Needs to be copied from nakamura.app -->
