Add a dynamic group to hold people who have successfully authenticated but who do not have a corresponding Jackrabbit User record

--- a/pom.xml
+++ b/pom.xml
@@ -25,8 +25,9 @@
         <activeByDefault>true</activeByDefault>
       </activation>
       <modules>
-        <module>root</module>
+        <module>foreignprincipal</module>
         <module>notices</module>
+        <module>root</module>
       </modules>
     </profile>
     <profile>
