--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -33,6 +33,12 @@
               <startLevel>0</startLevel>
             </bundle>
             <bundle>
+              <groupId>edu.berkeley.myberkeley</groupId>
+              <artifactId>edu.berkeley.myberkeley.foreignprincipal</artifactId>
+              <version>1.0-SNAPSHOT</version>
+              <startLevel>5</startLevel>
+            </bundle>
+            <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
               <artifactId>org.sakaiproject.nakamura.casauth</artifactId>
               <version>${nakamura.version}</version>
