--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -11,7 +11,7 @@
   <name>MyBerkeley executable</name>
   <version>1.0-SNAPSHOT</version>
   <properties>
-    <nakamura.version>0.6</nakamura.version>
+    <nakamura.version>0.7-SNAPSHOT</nakamura.version>
   </properties>
   <packaging>jar</packaging>
   <build>
@@ -34,8 +34,8 @@
             </bundle>
             <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
-              <artifactId>org.sakaiproject.nakamura.casauth-myberkeley</artifactId>
-              <version>0.6.1-SNAPSHOT</version>
+              <artifactId>org.sakaiproject.nakamura.casauth</artifactId>
+              <version>${nakamura.version}</version>
               <startLevel>15</startLevel>
             </bundle>
             <bundle>
@@ -55,10 +55,6 @@
             <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
               <artifactId>org.sakaiproject.nakamura.uxloader</artifactId>
-            </bundle>
-            <bundle>
-              <groupId>org.apache.sling</groupId>
-              <artifactId>org.apache.sling.httpauth</artifactId>
             </bundle>
             <bundle>
               <groupId>org.apache.sling</groupId>
@@ -115,4 +111,3 @@
     </dependency>
   </dependencies>
 </project>
-
