Now that rootconfig is in Nakamura, we can take the Java out of the local module; I'll leave the content holder in place for now, though, since it may prove helpful with our CAS authentication workflow

--- a/launchpad/pom.xml
+++ b/launchpad/pom.xml
@@ -46,6 +46,12 @@
             </bundle>
             <bundle>
               <groupId>org.sakaiproject.nakamura</groupId>
+              <artifactId>org.sakaiproject.nakamura.rootconfig</artifactId>
+              <version>${nakamura.version}</version>
+              <startLevel>15</startLevel>
+            </bundle>
+            <bundle>
+              <groupId>org.sakaiproject.nakamura</groupId>
               <artifactId>org.sakaiproject.nakamura.uxloader-myberkeley</artifactId>
               <version>0.5.0-SNAPSHOT</version>
               <startLevel>30</startLevel>
