--- a/notices/pom.xml
+++ b/notices/pom.xml
@@ -101,6 +101,12 @@
       <version>1.5.10</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>1.5.10</version>
+      <scope>provided</scope>      
+    </dependency>
 
 <!-- jms -->
     
