--- a/notices/pom.xml
+++ b/notices/pom.xml
@@ -56,14 +56,24 @@
       <version>0.9-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
-<!-- Sling --><!--
+<!-- Sling -->
     <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.servlets.post</artifactId>
       <version>2.0.4-incubator</version>
     </dependency>
-
---><!-- OSGi -->
+	<dependency>
+	   <groupId>org.apache.sling</groupId>
+	   <artifactId>org.apache.sling.commons.scheduler</artifactId>     
+	   <version>2.2.0</version>
+	</dependency>    
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>2.5</version>
+      <scope>provided</scope>
+    </dependency>	
+<!-- OSGi -->
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.osgi.core</artifactId>
