bringing up new parameterized dataloader, also now using authprofile/myberkeley for user data

--- a/integration/pom.xml
+++ b/integration/pom.xml
@@ -69,6 +69,7 @@
 	            <argument>-w</argument>
 	            <argument>${project.build.scriptSourceDirectory}/sling_data_loader.rb</argument>
 	            <argument>${loaddata.server}</argument>
+	            <argument>${loaddata.password}</argument>
 	            <argument>${loaddata.numusers}</argument>
 	          </arguments>
 	        </configuration>
