--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <sakai3.home>${project.parent.basedir}/working</sakai3.home>
     <sling.port>8080</sling.port>
     <loaddata.server>http://localhost:8080/</loaddata.server>
+    <loaddata.password>admin</loaddata.password>
     <loaddata.numusers>20</loaddata.numusers>
   </properties>
   <profiles>
