MYB-242: Add a logout URL so that sign out will sign out of CAS. The comment that this doesn't work turned out to be false.

--- a/samples/org.sakaiproject.nakamura.auth.cas.CasAuthenticationHandler.cfg
+++ b/samples/org.sakaiproject.nakamura.auth.cas.CasAuthenticationHandler.cfg
@@ -2,10 +2,7 @@
 # Sakai CAS Authorization Header Authenticator (org.sakaiproject.nakamura.casauth.CasAuthenticationHandler)
 sakai.auth.cas.url.server=https://auth-test.berkeley.edu/cas
 sakai.auth.cas.url.login=https://auth-test.berkeley.edu/cas/login
-
-# Not working at present.
-#auth.cas.server.logout=https://auth-test.berkeley.edu/cas/logout
-sakai.auth.cas.url.logout=
+sakai.auth.cas.url.logout=sakai.auth.cas.url.logout=https://auth-test.berkeley.edu/cas/logout?url=http://portal-qa.berkeley.edu
 
 # The path that this handler should do auth for
 path=/
