--- a/notices/pom.xml
+++ b/notices/pom.xml
@@ -66,7 +66,7 @@
     <dependency>
       <groupId>org.apache.sling</groupId>
       <artifactId>org.apache.sling.servlets.post</artifactId>
-      <version>2.0.4-incubator</version>
+      <version>2.0.5-20100823</version>
     </dependency>
 	<dependency>
 	   <groupId>org.apache.sling</groupId>
