--- a/samples/org.apache.sling.fsprovider.internal.FsResourceProvider-env.cfg
+++ b/samples/org.apache.sling.fsprovider.internal.FsResourceProvider-env.cfg
@@ -1,13 +1,12 @@
 # Config so we can serve out a slightly different env.js file so that the Javascript
-# code will know whether it's running on a dev, qa, or prod machine. 
+# code will know whether it's running on a dev machine.
 
-# Dev is the default environment and requires no special treatment. 
-# If you want to run on something OTHER than dev, copy this file into
+# Non-Dev is the default environment and requires no special treatment.
+# If you want to run on dev, copy this file into
 # your Sling working/load directory and edit the fully-qualified path below. 
 
-# fully-qualified path of the JS file that specifies the environment 
-# (can point at either env.prod.js or env.qa.js)
-provider.file=/Users/chris/dev/myberkeley/jsconfig/env.prod.js
+# fully-qualified path of the JS file that specifies the environment
+provider.file=/Users/chris/dev/myberkeley/jsconfig/env.dev.js
 
 # Don't edit below here. 
 provider.roots=/dev/_configuration/env.js
