--- a/notices/pom.xml
+++ b/notices/pom.xml
@@ -62,6 +62,18 @@
       <version>0.10-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>    
+    <dependency>
+      <groupId>org.sakaiproject.nakamura</groupId>
+      <artifactId>org.sakaiproject.nakamura.events</artifactId>
+      <version>0.10-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>   
+    <dependency>
+      <groupId>org.sakaiproject.nakamura</groupId>
+      <artifactId>org.sakaiproject.nakamura.email.outgoing</artifactId>
+      <version>0.10-SNAPSHOT</version>
+      <scope>provided</scope>
+    </dependency>  
 <!-- Sling -->
     <dependency>
       <groupId>org.apache.sling</groupId>
