MYB-32, MYB-383 - adding sending advisor to Bcc recipient list and minor cosmetics for system/console use

--- a/notices/src/main/resources/OSGI-INF/metatype/metatype.properties
+++ b/notices/src/main/resources/OSGI-INF/metatype/metatype.properties
@@ -27,3 +27,5 @@ sakai.email.maxRetries.name = Max Retries
 sakai.email.maxRetries.description = Maximum number of retries before failing a message.
 sakai.email.retryIntervalMinutes.name = Retry Interval
 sakai.email.retryIntervalMinutes.description = Interval to retry sending, in minutes.
+sakai.email.sendemail.name=Send Email
+sakai.email.sendemail.description=Email Sending Enabled.
