MYB-397 Add ability to exclude certain required states from tasks search

--- a/notices/src/main/resources/SLING-INF/content/var/message/notice/tasks.json
+++ b/notices/src/main/resources/SLING-INF/content/var/message/notice/tasks.json
@@ -1,6 +1,6 @@
 {
   "sakai:query-language": "xpath",
-  "sakai:query-template": "/{_userMessagePath}//element(*)MetaData[@sling:resourceType='sakai/message' and @sakai:type='notice' and @sakai:category='reminder' and @sakai:dueDate != '' and @sakai:dueDate >= xs:dateTime('{startDate}') and @sakai:dueDate <= xs:dateTime('{endDate}') and not(@sakai:archived) ] order by @{sortOn|jcr:dueDate} {sortOrder|ascending}",
+  "sakai:query-template": "/{_userMessagePath}//element(*)MetaData[@sling:resourceType='sakai/message' and @sakai:type='notice' and @sakai:category='reminder' and @sakai:dueDate != '' and @sakai:dueDate >= xs:dateTime('{startDate}') and @sakai:dueDate <= xs:dateTime('{endDate}') and not(@sakai:archived) and @sakai:required != '{excludeRequiredState}' ] order by @{sortOn|jcr:dueDate} {sortOrder|ascending}",
   "sling:resourceType": "sakai/search",
   "sakai:propertyprovider" : "Message",
   "sakai:resultprocessor": "Message",
